parser-BhaviD/parser.output
Terminals unused in grammar

   SIGNED
   COMMA
   HASH_SYM
   PARANTHESIS
   CURLY_BRACET
   SQUARE_BRACET
   NOT_OPR
   NO_MATCH


State 25 conflicts: 1 shift/reduce


Grammar

    0 $accept: parser $end

    1 parser: StmtList

    2 StmtList: %empty
    3         | CompoundStmt StmtList
    4         | SimpleStmt StmtList

    5 SimpleStmt: PrintStmt DELIMITER
    6           | PrintlnStmt DELIMITER
    7           | ReturnStmt DELIMITER
    8           | ContinueStmt DELIMITER
    9           | BreakStmt DELIMITER
   10           | IncludeStmt
   11           | DefineStmt
   12           | VarDec DELIMITER
   13           | InputStmt DELIMITER
   14           | Expr DELIMITER

   15 Atom: IDENTIFIER MultiDim
   16     | Literal

   17 Literal: BOOL_LIT
   18        | CHAR_LIT
   19        | INT_LIT
   20        | FLOAT_LIT
   21        | STRING_LIT

   22 PrintStmt: PRINT '(' ExprList ')'

   23 PrintlnStmt: PRINTLN '(' ExprList ')'

   24 ReturnStmt: RETURN Expr

   25 BreakStmt: BREAK

   26 ContinueStmt: CONTINUE

   27 IncludeStmt: '#' INCLUDE IDENTIFIER

   28 DefineStmt: '#' DEFINE IDENTIFIER Literal

   29 InputStmt: INPUT '(' Atom ')'

   30 IdentifierList: IDENTIFIER ',' IdentifierList
   31               | IDENTIFIER

   32 ParameterList: %empty
   33              | ',' ParameterList
   34              | DataType REFERENCE_OPR IDENTIFIER ParameterList
   35              | DataType IDENTIFIER ParameterList

   36 VarDec: DataType IdentifierList

   37 PrimitiveType: VOID
   38              | BOOL
   39              | CHAR
   40              | INT
   41              | UNSIGNED
   42              | FLOAT
   43              | LONG
   44              | LL
   45              | LLU
   46              | STRING

   47 MultiDim: %empty
   48         | '[' Expr ']' MultiDim

   49 DataType: PrimitiveType MultiDim

   50 Optr: LOGICAL_OPR
   51     | RELATIONAL_OPR
   52     | ARITHMETIC_OPR
   53     | BITWISE_OPR
   54     | ASSIGNMENT_OPR

   55 Block: '{' StmtList '}'

   56 FuncCall: IDENTIFIER '(' ExprList ')'

   57 Expr: Atom
   58     | FuncCall
   59     | UnaryExpr
   60     | BinaryExpr
   61     | TernaryExpr
   62     | '(' Expr ')'

   63 ExprList: %empty
   64         | ',' ExprList
   65         | Expr ExprList

   66 UnaryExpr: '(' ARITHMETIC_OPR Expr ')'
   67          | '(' LOGICAL_OPR Expr ')'

   68 BinaryExpr: Expr Optr Expr

   69 TernaryExpr: Expr '?' Expr ':' Expr

   70 CompoundStmt: IfStmt
   71             | ForStmt
   72             | WhileStmt
   73             | FuncDef

   74 IfStmt: IF '(' Expr ')' Block ElseBlock

   75 ElseBlock: %empty
   76          | ELSE Block
   77          | ELSE IfStmt

   78 ForStmt: FOR '(' Expr DELIMITER Expr DELIMITER IncrementStmt ')' Block

   79 IncrementStmt: %empty
   80              | Expr

   81 WhileStmt: WHILE '(' Expr ')' Block

   82 FuncDef: DataType IDENTIFIER '(' ParameterList ')' Block


Terminals, with rules where they appear

$end (0) 0
'#' (35) 27 28
'(' (40) 22 23 29 56 62 66 67 74 78 81 82
')' (41) 22 23 29 56 62 66 67 74 78 81 82
',' (44) 30 33 64
':' (58) 69
'?' (63) 69
'[' (91) 48
']' (93) 48
'{' (123) 55
'}' (125) 55
error (256)
BREAK (258) 25
CONTINUE (259) 26
INCLUDE (260) 27
DEFINE (261) 28
IF (262) 74
ELSE (263) 76 77
FOR (264) 78
WHILE (265) 81
SIGNED (266)
UNSIGNED (267) 41
BOOL (268) 38
LONG (269) 43
LL (270) 44
LLU (271) 45
RETURN (272) 24
VOID (273) 37
PRINT (274) 22
PRINTLN (275) 23
INPUT (276) 29
CHAR (277) 39
FLOAT (278) 42
INT (279) 40
STRING (280) 46
REFERENCE_OPR (281) 34
CHAR_LIT (282) 18
INT_LIT (283) 19
STRING_LIT (284) 21
FLOAT_LIT (285) 20
DELIMITER (286) 5 6 7 8 9 12 13 14 78
COMMA (287)
HASH_SYM (288)
PARANTHESIS (289)
CURLY_BRACET (290)
SQUARE_BRACET (291)
BOOL_LIT (292) 17
NOT_OPR (293)
LOGICAL_OPR (294) 50 67
RELATIONAL_OPR (295) 51
ARITHMETIC_OPR (296) 52 66
BITWISE_OPR (297) 53
ASSIGNMENT_OPR (298) 54
IDENTIFIER (299) 15 27 28 30 31 34 35 56 82
NO_MATCH (300)
TEMP (301)


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
parser (58)
    on left: 1, on right: 0
StmtList (59)
    on left: 2 3 4, on right: 1 3 4 55
SimpleStmt (60)
    on left: 5 6 7 8 9 10 11 12 13 14, on right: 4
Atom (61)
    on left: 15 16, on right: 29 57
Literal (62)
    on left: 17 18 19 20 21, on right: 16 28
PrintStmt (63)
    on left: 22, on right: 5
PrintlnStmt (64)
    on left: 23, on right: 6
ReturnStmt (65)
    on left: 24, on right: 7
BreakStmt (66)
    on left: 25, on right: 9
ContinueStmt (67)
    on left: 26, on right: 8
IncludeStmt (68)
    on left: 27, on right: 10
DefineStmt (69)
    on left: 28, on right: 11
InputStmt (70)
    on left: 29, on right: 13
IdentifierList (71)
    on left: 30 31, on right: 30 36
ParameterList (72)
    on left: 32 33 34 35, on right: 33 34 35 82
VarDec (73)
    on left: 36, on right: 12
PrimitiveType (74)
    on left: 37 38 39 40 41 42 43 44 45 46, on right: 49
MultiDim (75)
    on left: 47 48, on right: 15 48 49
DataType (76)
    on left: 49, on right: 34 35 36 82
Optr (77)
    on left: 50 51 52 53 54, on right: 68
Block (78)
    on left: 55, on right: 74 76 78 81 82
FuncCall (79)
    on left: 56, on right: 58
Expr (80)
    on left: 57 58 59 60 61 62, on right: 14 24 48 62 65 66 67 68 69
    74 78 80 81
ExprList (81)
    on left: 63 64 65, on right: 22 23 56 64 65
UnaryExpr (82)
    on left: 66 67, on right: 59
BinaryExpr (83)
    on left: 68, on right: 60
TernaryExpr (84)
    on left: 69, on right: 61
CompoundStmt (85)
    on left: 70 71 72 73, on right: 3
IfStmt (86)
    on left: 74, on right: 70 77
ElseBlock (87)
    on left: 75 76 77, on right: 74
ForStmt (88)
    on left: 78, on right: 71
IncrementStmt (89)
    on left: 79 80, on right: 78
WhileStmt (90)
    on left: 81, on right: 72
FuncDef (91)
    on left: 82, on right: 73


State 0

    0 $accept: . parser $end

    BREAK       shift, and go to state 1
    CONTINUE    shift, and go to state 2
    IF          shift, and go to state 3
    FOR         shift, and go to state 4
    WHILE       shift, and go to state 5
    UNSIGNED    shift, and go to state 6
    BOOL        shift, and go to state 7
    LONG        shift, and go to state 8
    LL          shift, and go to state 9
    LLU         shift, and go to state 10
    RETURN      shift, and go to state 11
    VOID        shift, and go to state 12
    PRINT       shift, and go to state 13
    PRINTLN     shift, and go to state 14
    INPUT       shift, and go to state 15
    CHAR        shift, and go to state 16
    FLOAT       shift, and go to state 17
    INT         shift, and go to state 18
    STRING      shift, and go to state 19
    CHAR_LIT    shift, and go to state 20
    INT_LIT     shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    FLOAT_LIT   shift, and go to state 23
    BOOL_LIT    shift, and go to state 24
    IDENTIFIER  shift, and go to state 25
    '('         shift, and go to state 26
    '#'         shift, and go to state 27

    $default  reduce using rule 2 (StmtList)

    parser         go to state 28
    StmtList       go to state 29
    SimpleStmt     go to state 30
    Atom           go to state 31
    Literal        go to state 32
    PrintStmt      go to state 33
    PrintlnStmt    go to state 34
    ReturnStmt     go to state 35
    BreakStmt      go to state 36
    ContinueStmt   go to state 37
    IncludeStmt    go to state 38
    DefineStmt     go to state 39
    InputStmt      go to state 40
    VarDec         go to state 41
    PrimitiveType  go to state 42
    DataType       go to state 43
    FuncCall       go to state 44
    Expr           go to state 45
    UnaryExpr      go to state 46
    BinaryExpr     go to state 47
    TernaryExpr    go to state 48
    CompoundStmt   go to state 49
    IfStmt         go to state 50
    ForStmt        go to state 51
    WhileStmt      go to state 52
    FuncDef        go to state 53


State 1

   25 BreakStmt: BREAK .

    $default  reduce using rule 25 (BreakStmt)


State 2

   26 ContinueStmt: CONTINUE .

    $default  reduce using rule 26 (ContinueStmt)


State 3

   74 IfStmt: IF . '(' Expr ')' Block ElseBlock

    '('  shift, and go to state 54


State 4

   78 ForStmt: FOR . '(' Expr DELIMITER Expr DELIMITER IncrementStmt ')' Block

    '('  shift, and go to state 55


State 5

   81 WhileStmt: WHILE . '(' Expr ')' Block

    '('  shift, and go to state 56


State 6

   41 PrimitiveType: UNSIGNED .

    $default  reduce using rule 41 (PrimitiveType)


State 7

   38 PrimitiveType: BOOL .

    $default  reduce using rule 38 (PrimitiveType)


State 8

   43 PrimitiveType: LONG .

    $default  reduce using rule 43 (PrimitiveType)


State 9

   44 PrimitiveType: LL .

    $default  reduce using rule 44 (PrimitiveType)


State 10

   45 PrimitiveType: LLU .

    $default  reduce using rule 45 (PrimitiveType)


State 11

   24 ReturnStmt: RETURN . Expr

    CHAR_LIT    shift, and go to state 20
    INT_LIT     shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    FLOAT_LIT   shift, and go to state 23
    BOOL_LIT    shift, and go to state 24
    IDENTIFIER  shift, and go to state 25
    '('         shift, and go to state 26

    Atom         go to state 31
    Literal      go to state 32
    FuncCall     go to state 44
    Expr         go to state 57
    UnaryExpr    go to state 46
    BinaryExpr   go to state 47
    TernaryExpr  go to state 48


State 12

   37 PrimitiveType: VOID .

    $default  reduce using rule 37 (PrimitiveType)


State 13

   22 PrintStmt: PRINT . '(' ExprList ')'

    '('  shift, and go to state 58


State 14

   23 PrintlnStmt: PRINTLN . '(' ExprList ')'

    '('  shift, and go to state 59


State 15

   29 InputStmt: INPUT . '(' Atom ')'

    '('  shift, and go to state 60


State 16

   39 PrimitiveType: CHAR .

    $default  reduce using rule 39 (PrimitiveType)


State 17

   42 PrimitiveType: FLOAT .

    $default  reduce using rule 42 (PrimitiveType)


State 18

   40 PrimitiveType: INT .

    $default  reduce using rule 40 (PrimitiveType)


State 19

   46 PrimitiveType: STRING .

    $default  reduce using rule 46 (PrimitiveType)


State 20

   18 Literal: CHAR_LIT .

    $default  reduce using rule 18 (Literal)


State 21

   19 Literal: INT_LIT .

    $default  reduce using rule 19 (Literal)


State 22

   21 Literal: STRING_LIT .

    $default  reduce using rule 21 (Literal)


State 23

   20 Literal: FLOAT_LIT .

    $default  reduce using rule 20 (Literal)


State 24

   17 Literal: BOOL_LIT .

    $default  reduce using rule 17 (Literal)


State 25

   15 Atom: IDENTIFIER . MultiDim
   56 FuncCall: IDENTIFIER . '(' ExprList ')'

    '('  shift, and go to state 61
    '['  shift, and go to state 62

    '('       [reduce using rule 47 (MultiDim)]
    $default  reduce using rule 47 (MultiDim)

    MultiDim  go to state 63


State 26

   62 Expr: '(' . Expr ')'
   66 UnaryExpr: '(' . ARITHMETIC_OPR Expr ')'
   67          | '(' . LOGICAL_OPR Expr ')'

    CHAR_LIT        shift, and go to state 20
    INT_LIT         shift, and go to state 21
    STRING_LIT      shift, and go to state 22
    FLOAT_LIT       shift, and go to state 23
    BOOL_LIT        shift, and go to state 24
    LOGICAL_OPR     shift, and go to state 64
    ARITHMETIC_OPR  shift, and go to state 65
    IDENTIFIER      shift, and go to state 25
    '('             shift, and go to state 26

    Atom         go to state 31
    Literal      go to state 32
    FuncCall     go to state 44
    Expr         go to state 66
    UnaryExpr    go to state 46
    BinaryExpr   go to state 47
    TernaryExpr  go to state 48


State 27

   27 IncludeStmt: '#' . INCLUDE IDENTIFIER
   28 DefineStmt: '#' . DEFINE IDENTIFIER Literal

    INCLUDE  shift, and go to state 67
    DEFINE   shift, and go to state 68


State 28

    0 $accept: parser . $end

    $end  shift, and go to state 69


State 29

    1 parser: StmtList .

    $default  reduce using rule 1 (parser)


State 30

    4 StmtList: SimpleStmt . StmtList

    BREAK       shift, and go to state 1
    CONTINUE    shift, and go to state 2
    IF          shift, and go to state 3
    FOR         shift, and go to state 4
    WHILE       shift, and go to state 5
    UNSIGNED    shift, and go to state 6
    BOOL        shift, and go to state 7
    LONG        shift, and go to state 8
    LL          shift, and go to state 9
    LLU         shift, and go to state 10
    RETURN      shift, and go to state 11
    VOID        shift, and go to state 12
    PRINT       shift, and go to state 13
    PRINTLN     shift, and go to state 14
    INPUT       shift, and go to state 15
    CHAR        shift, and go to state 16
    FLOAT       shift, and go to state 17
    INT         shift, and go to state 18
    STRING      shift, and go to state 19
    CHAR_LIT    shift, and go to state 20
    INT_LIT     shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    FLOAT_LIT   shift, and go to state 23
    BOOL_LIT    shift, and go to state 24
    IDENTIFIER  shift, and go to state 25
    '('         shift, and go to state 26
    '#'         shift, and go to state 27

    $default  reduce using rule 2 (StmtList)

    StmtList       go to state 70
    SimpleStmt     go to state 30
    Atom           go to state 31
    Literal        go to state 32
    PrintStmt      go to state 33
    PrintlnStmt    go to state 34
    ReturnStmt     go to state 35
    BreakStmt      go to state 36
    ContinueStmt   go to state 37
    IncludeStmt    go to state 38
    DefineStmt     go to state 39
    InputStmt      go to state 40
    VarDec         go to state 41
    PrimitiveType  go to state 42
    DataType       go to state 43
    FuncCall       go to state 44
    Expr           go to state 45
    UnaryExpr      go to state 46
    BinaryExpr     go to state 47
    TernaryExpr    go to state 48
    CompoundStmt   go to state 49
    IfStmt         go to state 50
    ForStmt        go to state 51
    WhileStmt      go to state 52
    FuncDef        go to state 53


State 31

   57 Expr: Atom .

    $default  reduce using rule 57 (Expr)


State 32

   16 Atom: Literal .

    $default  reduce using rule 16 (Atom)


State 33

    5 SimpleStmt: PrintStmt . DELIMITER

    DELIMITER  shift, and go to state 71


State 34

    6 SimpleStmt: PrintlnStmt . DELIMITER

    DELIMITER  shift, and go to state 72


State 35

    7 SimpleStmt: ReturnStmt . DELIMITER

    DELIMITER  shift, and go to state 73


State 36

    9 SimpleStmt: BreakStmt . DELIMITER

    DELIMITER  shift, and go to state 74


State 37

    8 SimpleStmt: ContinueStmt . DELIMITER

    DELIMITER  shift, and go to state 75


State 38

   10 SimpleStmt: IncludeStmt .

    $default  reduce using rule 10 (SimpleStmt)


State 39

   11 SimpleStmt: DefineStmt .

    $default  reduce using rule 11 (SimpleStmt)


State 40

   13 SimpleStmt: InputStmt . DELIMITER

    DELIMITER  shift, and go to state 76


State 41

   12 SimpleStmt: VarDec . DELIMITER

    DELIMITER  shift, and go to state 77


State 42

   49 DataType: PrimitiveType . MultiDim

    '['  shift, and go to state 62

    $default  reduce using rule 47 (MultiDim)

    MultiDim  go to state 78


State 43

   36 VarDec: DataType . IdentifierList
   82 FuncDef: DataType . IDENTIFIER '(' ParameterList ')' Block

    IDENTIFIER  shift, and go to state 79

    IdentifierList  go to state 80


State 44

   58 Expr: FuncCall .

    $default  reduce using rule 58 (Expr)


State 45

   14 SimpleStmt: Expr . DELIMITER
   68 BinaryExpr: Expr . Optr Expr
   69 TernaryExpr: Expr . '?' Expr ':' Expr

    DELIMITER       shift, and go to state 81
    LOGICAL_OPR     shift, and go to state 82
    RELATIONAL_OPR  shift, and go to state 83
    ARITHMETIC_OPR  shift, and go to state 84
    BITWISE_OPR     shift, and go to state 85
    ASSIGNMENT_OPR  shift, and go to state 86
    '?'             shift, and go to state 87

    Optr  go to state 88


State 46

   59 Expr: UnaryExpr .

    $default  reduce using rule 59 (Expr)


State 47

   60 Expr: BinaryExpr .

    $default  reduce using rule 60 (Expr)


State 48

   61 Expr: TernaryExpr .

    $default  reduce using rule 61 (Expr)


State 49

    3 StmtList: CompoundStmt . StmtList

    BREAK       shift, and go to state 1
    CONTINUE    shift, and go to state 2
    IF          shift, and go to state 3
    FOR         shift, and go to state 4
    WHILE       shift, and go to state 5
    UNSIGNED    shift, and go to state 6
    BOOL        shift, and go to state 7
    LONG        shift, and go to state 8
    LL          shift, and go to state 9
    LLU         shift, and go to state 10
    RETURN      shift, and go to state 11
    VOID        shift, and go to state 12
    PRINT       shift, and go to state 13
    PRINTLN     shift, and go to state 14
    INPUT       shift, and go to state 15
    CHAR        shift, and go to state 16
    FLOAT       shift, and go to state 17
    INT         shift, and go to state 18
    STRING      shift, and go to state 19
    CHAR_LIT    shift, and go to state 20
    INT_LIT     shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    FLOAT_LIT   shift, and go to state 23
    BOOL_LIT    shift, and go to state 24
    IDENTIFIER  shift, and go to state 25
    '('         shift, and go to state 26
    '#'         shift, and go to state 27

    $default  reduce using rule 2 (StmtList)

    StmtList       go to state 89
    SimpleStmt     go to state 30
    Atom           go to state 31
    Literal        go to state 32
    PrintStmt      go to state 33
    PrintlnStmt    go to state 34
    ReturnStmt     go to state 35
    BreakStmt      go to state 36
    ContinueStmt   go to state 37
    IncludeStmt    go to state 38
    DefineStmt     go to state 39
    InputStmt      go to state 40
    VarDec         go to state 41
    PrimitiveType  go to state 42
    DataType       go to state 43
    FuncCall       go to state 44
    Expr           go to state 45
    UnaryExpr      go to state 46
    BinaryExpr     go to state 47
    TernaryExpr    go to state 48
    CompoundStmt   go to state 49
    IfStmt         go to state 50
    ForStmt        go to state 51
    WhileStmt      go to state 52
    FuncDef        go to state 53


State 50

   70 CompoundStmt: IfStmt .

    $default  reduce using rule 70 (CompoundStmt)


State 51

   71 CompoundStmt: ForStmt .

    $default  reduce using rule 71 (CompoundStmt)


State 52

   72 CompoundStmt: WhileStmt .

    $default  reduce using rule 72 (CompoundStmt)


State 53

   73 CompoundStmt: FuncDef .

    $default  reduce using rule 73 (CompoundStmt)


State 54

   74 IfStmt: IF '(' . Expr ')' Block ElseBlock

    CHAR_LIT    shift, and go to state 20
    INT_LIT     shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    FLOAT_LIT   shift, and go to state 23
    BOOL_LIT    shift, and go to state 24
    IDENTIFIER  shift, and go to state 25
    '('         shift, and go to state 26

    Atom         go to state 31
    Literal      go to state 32
    FuncCall     go to state 44
    Expr         go to state 90
    UnaryExpr    go to state 46
    BinaryExpr   go to state 47
    TernaryExpr  go to state 48


State 55

   78 ForStmt: FOR '(' . Expr DELIMITER Expr DELIMITER IncrementStmt ')' Block

    CHAR_LIT    shift, and go to state 20
    INT_LIT     shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    FLOAT_LIT   shift, and go to state 23
    BOOL_LIT    shift, and go to state 24
    IDENTIFIER  shift, and go to state 25
    '('         shift, and go to state 26

    Atom         go to state 31
    Literal      go to state 32
    FuncCall     go to state 44
    Expr         go to state 91
    UnaryExpr    go to state 46
    BinaryExpr   go to state 47
    TernaryExpr  go to state 48


State 56

   81 WhileStmt: WHILE '(' . Expr ')' Block

    CHAR_LIT    shift, and go to state 20
    INT_LIT     shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    FLOAT_LIT   shift, and go to state 23
    BOOL_LIT    shift, and go to state 24
    IDENTIFIER  shift, and go to state 25
    '('         shift, and go to state 26

    Atom         go to state 31
    Literal      go to state 32
    FuncCall     go to state 44
    Expr         go to state 92
    UnaryExpr    go to state 46
    BinaryExpr   go to state 47
    TernaryExpr  go to state 48


State 57

   24 ReturnStmt: RETURN Expr .
   68 BinaryExpr: Expr . Optr Expr
   69 TernaryExpr: Expr . '?' Expr ':' Expr

    LOGICAL_OPR     shift, and go to state 82
    RELATIONAL_OPR  shift, and go to state 83
    ARITHMETIC_OPR  shift, and go to state 84
    BITWISE_OPR     shift, and go to state 85
    ASSIGNMENT_OPR  shift, and go to state 86
    '?'             shift, and go to state 87

    $default  reduce using rule 24 (ReturnStmt)

    Optr  go to state 88


State 58

   22 PrintStmt: PRINT '(' . ExprList ')'

    CHAR_LIT    shift, and go to state 20
    INT_LIT     shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    FLOAT_LIT   shift, and go to state 23
    BOOL_LIT    shift, and go to state 24
    IDENTIFIER  shift, and go to state 25
    '('         shift, and go to state 26
    ','         shift, and go to state 93

    $default  reduce using rule 63 (ExprList)
